# picat

./: Cargo.toml  LICENSE.md  README.md
src/: error.rs  main.rs  sixel.rs
